--- a/Eventa.Mobile/Eventa/Views/Events/BrowseEventsView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Events/BrowseEventsView.axaml
@@ -238,8 +238,12 @@
                                 <Border
                                     Grid.Row="0"
                                     Background="#E0E0E0"
+                                    ClipToBounds="True"
                                     CornerRadius="12,12,0,0">
-                                    <asyncImageLoader:AdvancedImage Source="{Binding Image}" />
+                                    <asyncImageLoader:AdvancedImage
+                                        RenderOptions.BitmapInterpolationMode="HighQuality"
+                                        Source="{Binding Image}"
+                                        Stretch="UniformToFill" />
                                 </Border>
 
                                 <!--  Event Details  -->
