--- a/Eventa.Mobile/Eventa/Views/Events/BrowseOrganizerEventsView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Events/BrowseOrganizerEventsView.axaml
@@ -2,8 +2,8 @@
     x:Class="Eventa.Views.Events.BrowseOrganizerEventsView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:asyncImageLoader="clr-namespace:AsyncImageLoader;assembly=AsyncImageLoader.Avalonia"
     xmlns:converters="clr-namespace:Eventa.Converters;assembly=Eventa"
-	xmlns:asyncImageLoader="clr-namespace:AsyncImageLoader;assembly=AsyncImageLoader.Avalonia"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:Eventa.ViewModels.Events"
@@ -146,7 +146,7 @@
                     TextAlignment="Center"
                     TextWrapping="WrapWithOverflow" />
             </ScrollViewer>
-            <ScrollViewer Grid.Row="2">
+            <ScrollViewer Grid.Row="2" ScrollViewer.IsScrollChainingEnabled="False">
                 <ItemsControl ItemsSource="{Binding Events}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
@@ -156,14 +156,18 @@
                                 Classes="EventCard">
                                 <Grid ColumnDefinitions="Auto,*">
                                     <!--  Event Image Placeholder  -->
-									<Border
+                                    <Border
                                         Grid.Column="0"
                                         Width="115"
                                         Height="97"
                                         Background="#D9D9D9"
+                                        ClipToBounds="True"
                                         CornerRadius="8">
-										<asyncImageLoader:AdvancedImage Source="{Binding Image}"/>
-									</Border>
+                                        <asyncImageLoader:AdvancedImage
+                                            RenderOptions.BitmapInterpolationMode="HighQuality"
+                                            Source="{Binding Image}"
+                                            Stretch="UniformToFill" />
+                                    </Border>
 
                                     <!--  Event Details  -->
                                     <StackPanel
