Fixed more bugs related to creating event, added browser support (there are a few bugs to solve be prod ready), fixed missed symbols in fonts (not perfect, better than transparent).
TODO: saving for browser, uploading image browser, loading images (somehow android server).

--- a/Eventa.Mobile/Eventa/Views/Main/MainPageView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Main/MainPageView.axaml
@@ -159,6 +159,8 @@
                                         IsVisible="{Binding IsLoading}"
                                         Spacing="5">
                                         <li:LoadingIndicator
+                                            Width="200"
+                                            Height="200"
                                             Foreground="#FF8181"
                                             IsActive="{Binding IsLoading}"
                                             Mode="Arcs"
