--- a/Eventa.Mobile/Eventa/Controls/DialogControl.axaml
+++ b/Eventa.Mobile/Eventa/Controls/DialogControl.axaml
@@ -39,7 +39,7 @@
                     TextAlignment="Center"
                     TextWrapping="Wrap" />
 
-                <StackPanel Margin="0,10,0,0" Spacing="12">
+                <UniformGrid Margin="0,10,0,0" Rows="1">
                     <Button
                         Name="NoButton"
                         Padding="0,12"
@@ -62,6 +62,7 @@
 
                     <Button
                         Name="OkButton"
+                        Grid.Column="1"
                         Padding="0,12"
                         HorizontalAlignment="Stretch"
                         HorizontalContentAlignment="Center"
@@ -79,7 +80,7 @@
                             </Style>
                         </Button.Styles>
                     </Button>
-                </StackPanel>
+                </UniformGrid>
             </StackPanel>
         </Border>
     </Panel>
