--- a/Eventa.Mobile/Eventa/Views/Events/BrowseEventsView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Events/BrowseEventsView.axaml
@@ -15,6 +15,7 @@
     mc:Ignorable="d">
     <UserControl.Resources>
         <converters:StringNotEmptyConverter x:Key="StringNotEmpty" />
+        <converters:StringEqualityConverter x:Key="StringEqualityConverter" />
     </UserControl.Resources>
     <UserControl.Styles>
         <Style Selector="TextBlock">
@@ -126,69 +127,133 @@
             Spacing="16">
             <!--  Filter Section  -->
             <Border
-                MaxHeight="250"
+                MaxHeight="400"
                 Padding="16"
                 Background="White"
                 BoxShadow="0 2 8 0 #20000000"
                 CornerRadius="12">
-                <ScrollViewer>
-                    <UniformGrid Columns="3">
-                        <!--  Date Filters  -->
-                        <Button
-                            Grid.Row="0"
-                            Grid.Column="0"
-                            Margin="4"
-                            Classes="FilterButton Selected">
-                            <TextBlock Text="Top Events" TextWrapping="NoWrap" />
-                        </Button>
-                        <Button
-                            Grid.Row="0"
-                            Grid.Column="1"
-                            Margin="4"
-                            Classes="FilterButton">
-                            <TextBlock Text="Any Date" TextWrapping="NoWrap" />
-                        </Button>
-                        <Button
-                            Grid.Row="0"
-                            Grid.Column="2"
-                            Margin="4"
-                            Classes="FilterButton">
-                            <TextBlock Text="Today" TextWrapping="NoWrap" />
-                        </Button>
-                        <Button
-                            Grid.Row="1"
-                            Grid.Column="0"
-                            Margin="4"
-                            Classes="FilterButton">
-                            <TextBlock Text="This Week" TextWrapping="NoWrap" />
-                        </Button>
-                        <Button
-                            Grid.Row="1"
-                            Grid.Column="1"
-                            Margin="4"
-                            Classes="FilterButton">
-                            <TextBlock Text="On Weekend" TextWrapping="NoWrap" />
-                        </Button>
-                        <Button
-                            Grid.Row="1"
-                            Grid.Column="2"
-                            Margin="4"
-                            Classes="FilterButton">
-                            <StackPanel Orientation="Horizontal" Spacing="4">
-                                <PathIcon
-                                    Width="14"
-                                    Height="14"
-                                    Data="{StaticResource CalendarIcon}"
-                                    Foreground="#666666" />
-                                <TextBlock Text="Choose" TextWrapping="NoWrap" />
-                                <PathIcon
-                                    Width="10"
-                                    Height="10"
-                                    Data="{StaticResource DownArrowIcon}"
-                                    Foreground="#666666" />
+                <ScrollViewer ScrollViewer.IsScrollChainingEnabled="False">
+                    <StackPanel Spacing="12">
+                        <!--  Date Filter Buttons  -->
+                        <UniformGrid Columns="3">
+                            <Button
+                                Margin="4"
+                                Classes.FilterButton="True"
+                                Classes.Selected="{Binding SelectedDateFilter, Converter={StaticResource StringEqualityConverter}, ConverterParameter=TopEvents}"
+                                Command="{Binding SetDateFilterCommand}"
+                                CommandParameter="TopEvents">
+                                <TextBlock Text="Top Events" TextWrapping="NoWrap" />
+                            </Button>
+                            <Button
+                                Margin="4"
+                                Classes.FilterButton="True"
+                                Classes.Selected="{Binding SelectedDateFilter, Converter={StaticResource StringEqualityConverter}, ConverterParameter=AnyDate}"
+                                Command="{Binding SetDateFilterCommand}"
+                                CommandParameter="AnyDate">
+                                <TextBlock Text="Any Date" TextWrapping="NoWrap" />
+                            </Button>
+                            <Button
+                                Margin="4"
+                                Classes.FilterButton="True"
+                                Classes.Selected="{Binding SelectedDateFilter, Converter={StaticResource StringEqualityConverter}, ConverterParameter=Today}"
+                                Command="{Binding SetDateFilterCommand}"
+                                CommandParameter="Today">
+                                <TextBlock Text="Today" TextWrapping="NoWrap" />
+                            </Button>
+                            <Button
+                                Margin="4"
+                                Classes.FilterButton="True"
+                                Classes.Selected="{Binding SelectedDateFilter, Converter={StaticResource StringEqualityConverter}, ConverterParameter=ThisWeek}"
+                                Command="{Binding SetDateFilterCommand}"
+                                CommandParameter="ThisWeek">
+                                <TextBlock Text="This Week" TextWrapping="NoWrap" />
+                            </Button>
+                            <Button
+                                Margin="4"
+                                Classes.FilterButton="True"
+                                Classes.Selected="{Binding SelectedDateFilter, Converter={StaticResource StringEqualityConverter}, ConverterParameter=OnWeekend}"
+                                Command="{Binding SetDateFilterCommand}"
+                                CommandParameter="OnWeekend">
+                                <TextBlock Text="On Weekend" TextWrapping="NoWrap" />
+                            </Button>
+                            <Button
+                                Margin="4"
+                                Classes.FilterButton="True"
+                                Classes.Selected="{Binding SelectedDateFilter, Converter={StaticResource StringEqualityConverter}, ConverterParameter=Custom}"
+                                Command="{Binding SetDateFilterCommand}"
+                                CommandParameter="Custom">
+                                <StackPanel Orientation="Horizontal" Spacing="4">
+                                    <PathIcon
+                                        Width="14"
+                                        Height="14"
+                                        Data="{StaticResource CalendarIcon}"
+                                        Foreground="#666666" />
+                                    <TextBlock Text="Choose" TextWrapping="NoWrap" />
+                                    <PathIcon
+                                        Width="10"
+                                        Height="10"
+                                        Data="{StaticResource DownArrowIcon}"
+                                        Foreground="#666666" />
+                                </StackPanel>
+                            </Button>
+                        </UniformGrid>
+
+                        <Border
+                            Padding="12"
+                            Background="#F5F5F5"
+                            CornerRadius="8"
+                            IsVisible="{Binding SelectedDateFilter, Converter={StaticResource StringEqualityConverter}, ConverterParameter=Custom}">
+                            <StackPanel Spacing="8">
+                                <TextBlock
+                                    FontFamily="{StaticResource Kadwa}"
+                                    FontSize="12"
+                                    FontWeight="SemiBold"
+                                    Foreground="#333333"
+                                    Text="Select Date Range" />
+                                <Grid RowDefinitions="*,8,*">
+                                    <StackPanel Grid.Row="0" Spacing="4">
+                                        <TextBlock
+                                            FontFamily="{StaticResource Kadwa}"
+                                            FontSize="11"
+                                            Foreground="#666666"
+                                            Text="Start Date" />
+                                        <DatePicker
+                                            HorizontalAlignment="Stretch"
+                                            FontFamily="{StaticResource Kadwa}"
+                                            SelectedDate="{Binding CustomStartDate}">
+                                            <DatePicker.Styles>
+                                                <Style Selector="DatePickerPresenter">
+                                                    <Setter Property="FontFamily" Value="{StaticResource Kadwa}" />
+                                                </Style>
+                                            </DatePicker.Styles>
+                                        </DatePicker>
+                                    </StackPanel>
+                                    <StackPanel Grid.Row="2" Spacing="4">
+                                        <TextBlock
+                                            FontFamily="{StaticResource Kadwa}"
+                                            FontSize="11"
+                                            Foreground="#666666"
+                                            Text="End Date" />
+                                        <DatePicker
+                                            HorizontalAlignment="Stretch"
+                                            FontFamily="{StaticResource Kadwa}"
+                                            SelectedDate="{Binding CustomEndDate}">
+                                            <DatePicker.Styles>
+                                                <Style Selector="DatePickerPresenter">
+                                                    <Setter Property="FontFamily" Value="{StaticResource Kadwa}" />
+                                                </Style>
+                                            </DatePicker.Styles>
+                                        </DatePicker>
+                                    </StackPanel>
+                                </Grid>
+                                <Button
+                                    HorizontalAlignment="Right"
+                                    Classes="FilterButton"
+                                    Command="{Binding ApplyCustomDateRangeCommand}"
+                                    Content="Apply" />
                             </StackPanel>
-                        </Button>
-                    </UniformGrid>
+                        </Border>
+                    </StackPanel>
                 </ScrollViewer>
             </Border>
             <Border
