--- a/Eventa.Mobile/Eventa/Views/Tickets/ViewPurchasedTicketsView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Tickets/ViewPurchasedTicketsView.axaml
@@ -79,11 +79,11 @@
                                         TextAlignment="Center"
                                         TextWrapping="Wrap" />
 
-                                    <!--  Date and Time (placeholder - you'll need to fetch this)  -->
+                                    <!--  Date and Time -->
                                     <TextBlock
                                         FontSize="12"
                                         Foreground="#999999"
-                                        Text="[Date, time]"
+                                        Text="{Binding EventDateTime, StringFormat='{}{0:dd MMM yyyy, HH:mm'}"
                                         TextAlignment="Center" />
 
                                     <!--  Ticket Details Background  -->
