Added generating qr code in tickets

--- a/Eventa.Mobile/Eventa/Views/Events/BrowseOrganizerEventsView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Events/BrowseOrganizerEventsView.axaml
@@ -82,6 +82,22 @@
             <Setter Property="CornerRadius" Value="0" />
             <Setter Property="Opacity" Value="0.5" />
         </Style>
+
+        <Style Selector="Button.CheckTicket">
+            <Setter Property="Background" Value="#FFB5B5" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="CornerRadius" Value="8" />
+            <Setter Property="Padding" Value="20,8" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="FontFamily" Value="{StaticResource Kadwa}" />
+            <Setter Property="FontSize" Value="13" />
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+        </Style>
+
+        <Style Selector="Button.CheckTicket:pointerover /template/ ContentPresenter">
+            <Setter Property="Background" Value="#FF9999" />
+        </Style>
     </UserControl.Styles>
     <UserControl.Resources>
         <converters:StringNotEmptyConverter x:Key="StringNotEmpty" />
